--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>ADS</title>
+    <script type='text/javascript' src='//pl18759240.highrevenuegate.com/6f/f2/fe/6ff2fe81f1252d3850a396e7045e34c8.js'></script>
   </head>
   <body>
     <div id="root"></div>
