--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
 </head>
 
 <body>
- <script type="text/javascript">
-	atOptions = {
-		'key' : '99de305482c95e139c7ee7491cbab9dc',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/99de305482c95e139c7ee7491cbab9dc/invoke.js"></scr' + 'ipt>');
-</script>
+  <script async="async" data-cfasync="false"
+    src="//pl18769689.highrevenuegate.com/a833794f703ad98dda173c586a0e1e42/invoke.js"></script>
+  <div id="container-a833794f703ad98dda173c586a0e1e42"></div>
+  <div style="display: flex;">
+    <script async type="text/javascript">
+      atOptions = {
+        'key': '99de305482c95e139c7ee7491cbab9dc',
+        'format': 'iframe',
+        'height': 600,
+        'width': 160,
+        'params': {},
+        'loading': 'lazy'
+      };
+      document.write('<script type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/99de305482c95e139c7ee7491cbab9dc/invoke.js"></scr' + 'ipt>');
+    </script>
 
     <div style="flex: 1;" id="root"></div>
 
@@ -39,12 +44,11 @@
     </script>
 
   </div>
- 
+  <script type='text/javascript' src='//pl18759283.highrevenuegate.com/4d/6c/2f/4d6c2f2bd003504253e237f4aa132114.js'></script>
   <script type="module" src="/src/main.jsx"></script>
-  
- <script async="async" data-cfasync="false" src="//pl18769689.highrevenuegate.com/a833794f703ad98dda173c586a0e1e42/invoke.js"></script>
-<div id="container-a833794f703ad98dda173c586a0e1e42"></div>
-	<script type='text/javascript' src='//pl18759283.highrevenuegate.com/4d/6c/2f/4d6c2f2bd003504253e237f4aa132114.js'></script>
+  <script type='text/javascript'
+    src='//pl18759283.highrevenuegate.com/4d/6c/2f/4d6c2f2bd003504253e237f4aa132114.js'></script>
+  <div id="ya"></div>
 </body>
 
 </html>
